feat(init) Add Server components for Mgr and Emp

--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -31,6 +31,20 @@ img {
   height: 150px;
 }
 
+.serverShifts {
+  display: flex;
+  flex-flow: column wrap;
+  width: 900px;
+  height: 220px;
+}
+
+.serverShiftsEmp {
+  display: flex;
+  flex-flow: column wrap;
+  width: 900px;
+  height: 120px;
+}
+
 .hide {
   opacity: 0;
 }
