WIP Create new user

--- a/src/app/components/Manager.css
+++ b/src/app/components/Manager.css
@@ -7,3 +7,13 @@
   background-color: #555;
   font-family: Helvetica;
 }
+
+.kitchen {
+  background-color: #555;
+  font-family: Helvetica;
+}
+
+.door {
+  background-color: #555;
+  font-family: Helvetica;
+}
