--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -127,14 +127,14 @@
 
   .home {
     position: absolute;
-    margin-top: 100px;
+    margin-top: 120px;
     padding-left: 10px;
     text-align: center;
     width: 100%;
   }
 
   .bodyRoute {
-    margin: 110px 10px 10px 10px;
+    margin: 120px 10px 10px 10px;
     padding-left: 10px;
     position: absolute;
     background-color: #555;
@@ -206,6 +206,7 @@
     justify-content: flex-end;
     flex-wrap: wrap;
     margin-right: .5em;
+    margin-bottom: 10px;
     width: 305px;
     height: 102px;
   }
@@ -251,6 +252,7 @@
     background-color: darkred;
     width: 100%;
     z-index: 1;
+    height: 110px;
   }
 
   header img {
