--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -122,6 +122,7 @@
   body {
     background-color: darkslategrey;
     overflow: auto;
+    color: #d9d9d9;
   }
 
   .home {
@@ -136,7 +137,7 @@
     margin: 120px 10px 10px 10px;
     padding-left: 10px;
     position: absolute;
-    background-color: #555;
+    background-color: #444;
     font-family: Helvetica, sans-serif;
   }
 
